--- a/Views/Home/Registration.cshtml
+++ b/Views/Home/Registration.cshtml
@@ -8,85 +8,108 @@
     <h1 class="display-4">@Model.PageTitle</h1>
 
 </div>
+<br />
+
+<p class="lead">Будь ласка, заповніть реєстраційну форму.</p>
 
 
-
-
-
-
-
-<p>Будь ласка, заповніть реєстраційну форму.</p>
-<p>
-    З точки зору MVC, як патерна проектування, Модель – це архітектурна частина проекту, яка відповідає за "постачання" даних.
-</p>
-<p>
-
-    В ASP дещо відмінне розуміння моделей – задачі постачання даних делегуються "контексту" даних (DataContext),
-    тоді як самі моделі – це класи (типи даних) за допомогою яких дані передаються між різними частинами системи.
-</p>
-<p>
-    У відповідності до тих частин системи, між якими передаються дані, моделі умовно розрізняють як:
-    <ul>
-        <li>Моделі представлень (View Models / Page Models) - набір даних, який потрібен для заповнення сторінки та її відображення (дані про користувача, вибрані товари, акційні пропозиції - усе разом)</li>
-        <li>Моделі форм (Form Models) - сукупність даних, що їх передає HTML форма і обробляється контролером.</li>
-        <li>Моделі даних (Entities) - класи для відображення (ORM) вихідних даних (від БД чи JSON API тощо)</li>
-    </ul>
-</p>
-
-<p>
-    <strong>Моделі представлень.</strong> Оголошуемо класи у розділі "Models".
-    У контролері у відповідному методі створюемо і заповнюемо об'ект належного класу (model) та передаемо його в інструкції
-    <code>return View(model)</code>
-    <br />
-    У представленні на початку документу зазначаемо тип моделі:
-    <br />
-    <code>&commat; model ASP_SPU221.Models.Home.HomeModelsPageModel </code>
-    <br />
-    і в подальшому коді переданий об'ект (model) доступний через ключове слово <code>Model</code>
-</p>
-
-<p>
-    <strong>Моделі форм</strong> слугують для прийняття даних від HTML форм, узгодження типів даних (в HTML всі дані текстові, у С# - ні),
-    а також імен полів (HTML дозволяе імена на кшталт "field-name", які у С# не е прийнятними)
-</p>
-
-<form asp-action="Models" method="post" enctype="multipart/form-data">
+<form asp-action="Registration" method="post" enctype="multipart/form-data">
     <div class="row">
         <div class="col">
-            <div class="input-group mb-3">
-                <span class="input-group-text" id="username-addon"><i class="bi bi-person-fill-add"></i></span>
-                <input type="text" class="form-control" placeholder="Введіть Ім`я:" aria-label="Username" aria-describedby="username-addon" name="signup-username">
+            <div class="row">
+                <div class="input-group mb-3">
+                    <span class="input-group-text" id="userName-addon"><i class="bi bi-person-fill-add"></i></span>
+                    <input type="text" class="form-control" placeholder="Введіть Ім`я:" aria-label="UserName" aria-describedby="userName-addon" name="signup-userName">
+                </div>
+                <div class="input-group mb-3">
+                    <span class="input-group-text" id="userSurname-addon"><i class="bi bi-person-fill-add"></i></span>
+                    <input type="text" class="form-control" placeholder="Введіть Прізвище:" aria-label="UserSurname" aria-describedby="userSurname-addon" name="signup-userSurname">
+                </div>
+                <div class="input-group mb-3">
+                    <span class="input-group-text" id="userPhone-addon"><i class="bi bi-phone"></i></span>
+                    <input type="tel" class="form-control" placeholder="Введіть Телефон:" aria-label="UserPhone" aria-describedby="userPhone-addon" name="signup-userPhone">
+                </div>
+                <div class="input-group mb-3">
+                    <span class="input-group-text" id="userEmail-addon"><i class="bi bi-envelope-at"></i></span>
+                    <input type="tel" class="form-control" placeholder="Введіть Email:" aria-label="UserEmail" aria-describedby="userEmail-addon" name="signup-userEmail">
+                </div>
+                <p>Введіть Адресу:</p>
+                <div class="input-group mb-3">
+                    <span class="input-group-text" id="userCountry-addon"><i class="bi bi-geo-alt"></i></span>
+                    <input type="text" class="form-control" placeholder="Страна:" aria-label="UserCountry" aria-describedby="userCountry-addon" name="signup-userCountry">
+                </div>
+                <div class="input-group mb-3">
+                    <span class="input-group-text" id="userRegion-addon"><i class="bi bi-geo-alt"></i></span>
+                    <input type="text" class="form-control" placeholder="Область:" aria-label="UserRegion" aria-describedby="userRegion-addon" name="signup-userRegion">
+                </div>
+                <div class="input-group mb-3">
+                    <span class="input-group-text" id="userLocality-addon"><i class="bi bi-geo-alt"></i></span>
+                    <input type="text" class="form-control" placeholder="Населений пункт:" aria-label="UserLocality" aria-describedby="userLocality-addon" name="signup-userLocality">
+                </div>
+                <div class="input-group mb-3">
+                    <span class="input-group-text" id="userAddress1-addon"><i class="bi bi-geo-alt"></i></span>
+                    <input type="text" class="form-control" placeholder="Адреса:" aria-label="UserAddress1" aria-describedby="userAddress1-addon" name="signup-userAddress1">
+                </div>
+                <div class="input-group mb-3">
+                    <span class="input-group-text" id="userAddress2-addon"><i class="bi bi-geo-alt"></i></span>
+                    <input type="text" class="form-control" placeholder="Будова/дім/кв.:" aria-label="UserAddress2" aria-describedby="userAddress2-addon" name="signup-userAddress2">
+                </div>
+                <div class="input-group mb-3">
+                    <span class="input-group-text" id="userInteractionForm-addon"><i class="bi bi-person-workspace"></i></span>
+                    <select class="form-select" aria-label="UserInteractionForm" aria-describedby="userInteractionForm-addon" name="signup-userInteractionForm">
+                        <option selected>Оберить форму взаємодії (фізична/юридична особа)</option>
+                        <option value="Фізична-особа">Фізична особа</option>
+                        <option value="Юрідична-особа">Юрідична особа</option>
+                    </select>
+                </div>
+                <div class="input-group mb-3">
+                    <span class="input-group-text" id="userCompanyName-addon"><i class="bi bi-building"></i></span>
+                    <input type="text" class="form-control" placeholder="Введіть назву организації:" aria-label="UserCompanyName" aria-describedby="userCompanyName-addon" name="signup-userCompanyName">
+                </div>
             </div>
         </div>
+
         <div class="col">
-            <div class="input-group mb-3">
-                <span class="input-group-text" id="userEmail-addon"><i class="bi bi-envelope-open"></i></span>
-                <input type="email" class="form-control" placeholder="Введіть Email:" aria-label="UserEmail" aria-describedby="userEmail-addon" name="signup-email">
+            <div class="row">
+                <div class="input-group mb-3">
+                    <span class="input-group-text" id="userPassword-addon"><i class="bi bi-person-fill-add"></i></span>
+                    <input type="password" class="form-control" placeholder="Введіть пароль:" aria-label="UserPassword" aria-describedby="userPassword-addon" name="signup-userPassword">
+                </div>
+                <div class="input-group mb-3">
+                    <span class="input-group-text" id="userPasswordConfirm-addon"><i class="bi bi-person-fill-add"></i></span>
+                    <input type="password" class="form-control" placeholder="Підтвердіть пароль:" aria-label="UserPasswordConfirm" aria-describedby="userPasswordConfirm-addon" name="signup-userPasswordConfirm">
+                </div>
+                <div class="input-group mb-3">
+                    <button type="submit" class="btn btn-outline-primary">Реєстрація</button>
+                </div>
+            </div>
+
+            <div class="row">
+                <p>Ви ввели:</p>
+                @if (Model.FormModel.UserFirstName != null)
+                {
+                    <ul>
+                        <li>Ім`я: @(Model.FormModel.UserFirstName)</li>
+                        <li>Прізвище: @(Model.FormModel.UserLastName)</li>
+                        <li>Телефон: @(Model.FormModel.UserPhoneNumber)</li>
+                        <li>Пошта:@(Model.FormModel.UserEmail)</li>
+                        <li>Страна: @(Model.FormModel.UserCountry)</li>
+                        <li>Область: @(Model.FormModel.UserRegion)</li>
+                        <li>Населений пункт: @(Model.FormModel.UserLocality)</li>
+                        <li>Адреса: @(Model.FormModel.UserAddress1)</li>
+                        <li>Будова/дім/кв.: @(Model.FormModel.UserAddress2)</li>
+                        <li>Форма взаємодії : @(Model.FormModel.UserInteractionForm)</li>
+                        <li>Назва организації: @(Model.FormModel.UserCompanyName)</li>
+                        <li>Пароль: @(Model.FormModel.UserPassword)</li>
+                        <li>підтвердження паролю: @(Model.FormModel.UserPasswordConfirm)</li>
+
+                    </ul>
+            
+                }
             </div>
         </div>
-    </div>
-
-    <div class="row">
-        <div class="col">
-            <div class="input-group mb-3">
-                <label class="input-group-text" for="signup-avatar"><i class="bi bi-person"></i></label>
-                <input type="file" class="form-control" id="signup-avatar" name="signup-avatar">
-            </div>
-        </div>
-        <div class="col">
-            <button type="submit" class="btn btn-outline-primary">Реєстрація</button>
-        </div>
 
 
-        </button>
     </div>
 </form>
 
-@if (Model.FormModel.UserName != null)
-{
-    <p>
-        Ви ввели: Ім`я: @(Model.FormModel.UserName)
-        <br />
-        Пошта:@(Model.FormModel.UserEmail)
-    </p>
-}
