--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -13,8 +13,9 @@
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container-fluid">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index"><i class="bi bi-gear"></i> M.Portal</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
+                <h2><a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index"><i class="bi bi-gear"></i> M.Portal</a></h2>
+
+                <button class="navbar-toggler " type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
@@ -26,13 +27,12 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="About">Про портал</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark align-self-lg-end" asp-area="" asp-controller="Home" asp-action="Registration">Реєстрація</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark align-self-lg-end" asp-area="" asp-controller="Account" asp-action="Index">Облікові дані</a>
-                        </li>
+                                          
                     </ul>
+                    <a class="nav-link text-dark align-self-lg-end" asp-area="" asp-controller="Account" asp-action="Index">Облікові дані</a>
+                    <a class="nav-link text-dark align-self-lg-end" asp-area="" asp-controller="Home" asp-action="Registration">Реєстрація</a>
+                    <a class="nav-link text-dark align-self-lg-end" asp-area="" asp-controller="Home" asp-action="SignIn">Увійти</a>
+ 
                 </div>
             </div>
         </nav>
