--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -14,7 +14,7 @@
     <p class="lead">Для доступу до порталу, необхідно Зареєструватися/Увійти.</p>
     <br />
     <div class="d-grid gap-2 col-3 mx-auto">
-        <a asp-controller="Home" asp-action="Registration" class="btn btn-outline-secondary">Реєстрація</a>
+        <a asp-controller="Home" asp-action="SignUp" class="btn btn-outline-secondary">Реєстрація</a>
         <a asp-controller="Home" asp-action="SignIn" class="btn btn-outline-secondary">Увійти</a>
     </div>
     <p>
