--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -29,8 +29,7 @@
                         </li>
                                           
                     </ul>
-                    <a class="nav-link text-dark align-self-lg-end" asp-area="" asp-controller="Account" asp-action="Index">Облікові дані</a>
-                    <a class="nav-link text-dark align-self-lg-end" asp-area="" asp-controller="Home" asp-action="Registration">Реєстрація</a>
+                    <a class="nav-link text-dark align-self-lg-end" asp-area="" asp-controller="Home" asp-action="SignUp">Реєстрація</a>
                     <a class="nav-link text-dark align-self-lg-end" asp-area="" asp-controller="Home" asp-action="SignIn">Увійти</a>
  
                 </div>
