--- a/Views/Home/SignUp.cshtml
+++ b/Views/Home/SignUp.cshtml
@@ -17,20 +17,30 @@
             <div class="row">
                 <div class="input-group mb-3">
                     <span class="input-group-text" id="userName-addon"><i class="bi bi-person-fill-add"></i></span>
-                    <input type="text" class="form-control" placeholder="Введіть Ім`я:" aria-label="UserName" aria-describedby="userName-addon" name="signup-userName">
+                    <input type="text" class="form-control" placeholder="Введіть Ім`я:" aria-label="UserName" 
+                            aria-describedby="userName-addon" name="signup-userName"
+                            value="@Model.SignUpFormModel?.UserName">
                 </div>
                 @if (Model.ValidationErrors.ContainsKey("UserName"))
                 {
-                    <div class="alert alert-danger">@Model.ValidationErrors["UserName"]</div>
+                    <div class="p-1 alert alert-danger">@Model.ValidationErrors["UserName"]</div>
                 }
                 <div class="input-group mb-3">
                     <span class="input-group-text" id="userSurname-addon"><i class="bi bi-person-fill-add"></i></span>
                     <input type="text" class="form-control" placeholder="Введіть Прізвище:" aria-label="UserSurname" aria-describedby="userSurname-addon" name="signup-userSurname">
                 </div>
+                @if (Model.ValidationErrors.ContainsKey("UserSurName"))
+                {
+                    <div class="p-1 alert alert-danger">@Model.ValidationErrors["UserSurName"]</div>
+                }
                 <div class="input-group mb-3">
                     <span class="input-group-text" id="userPhone-addon"><i class="bi bi-phone"></i></span>
                     <input type="tel" class="form-control" placeholder="Введіть Телефон:" aria-label="UserPhone" aria-describedby="userPhone-addon" name="signup-userPhone">
                 </div>
+                @if (Model.ValidationErrors.ContainsKey("UserPhoneNumber"))
+                {
+                    <div class="p-1 alert alert-danger">@Model.ValidationErrors["UserPhoneNumber"]</div>
+                }
                 <div class="input-group mb-3">
                     <span class="input-group-text" id="userEmail-addon"><i class="bi bi-envelope-at"></i></span>
                     <input type="tel" class="form-control" placeholder="Введіть Email:" aria-label="UserEmail" aria-describedby="userEmail-addon" name="signup-userEmail">
@@ -84,7 +94,7 @@
                 <div class="input-group mb-3">
                     <button type="submit" class="btn btn-outline-primary">Реєстрація</button>
                 </div>
-                <div class=" mb-3">
+                <div class="mb-3">
                     @if (Model.IsSuccess != null)
                     {
                         <div class="d-flex p-2 bd-highlight alert  @(Model.IsSuccess ?? false ? "alert-success" : "alert-danger")" role="alert">
