--- a/Views/Home/SignUp.cshtml
+++ b/Views/Home/SignUp.cshtml
@@ -17,9 +17,9 @@
             <div class="row">
                 <div class="input-group mb-3">
                     <span class="input-group-text" id="userName-addon"><i class="bi bi-person-fill-add"></i></span>
-                    <input type="text" class="form-control" placeholder="Введіть Ім`я:" aria-label="UserName" 
-                            aria-describedby="userName-addon" name="signup-userName"
-                            value="@Model.SignUpFormModel?.UserName">
+                    <input type="text" class="form-control" placeholder="Введіть Ім`я:" aria-label="UserName"
+                           aria-describedby="userName-addon" name="signup-userName"
+                           value="@Model.SignUpFormModel?.UserName">
                 </div>
                 @if (Model.ValidationErrors.ContainsKey("UserName"))
                 {
@@ -27,7 +27,9 @@
                 }
                 <div class="input-group mb-3">
                     <span class="input-group-text" id="userSurname-addon"><i class="bi bi-person-fill-add"></i></span>
-                    <input type="text" class="form-control" placeholder="Введіть Прізвище:" aria-label="UserSurname" aria-describedby="userSurname-addon" name="signup-userSurname">
+                    <input type="text" class="form-control" placeholder="Введіть Прізвище:" aria-label="UserSurname"
+                           aria-describedby="userSurname-addon" name="signup-userSurname"
+                           value="@Model.SignUpFormModel?.UserSurName">
                 </div>
                 @if (Model.ValidationErrors.ContainsKey("UserSurName"))
                 {
@@ -35,7 +37,9 @@
                 }
                 <div class="input-group mb-3">
                     <span class="input-group-text" id="userPhone-addon"><i class="bi bi-phone"></i></span>
-                    <input type="tel" class="form-control" placeholder="Введіть Телефон:" aria-label="UserPhone" aria-describedby="userPhone-addon" name="signup-userPhone">
+                    <input type="tel" class="form-control" placeholder="Введіть Телефон:" aria-label="UserPhone"
+                           aria-describedby="userPhone-addon" name="signup-userPhone"
+                           value="@Model.SignUpFormModel?.UserPhoneNumber">
                 </div>
                 @if (Model.ValidationErrors.ContainsKey("UserPhoneNumber"))
                 {
@@ -43,41 +47,95 @@
                 }
                 <div class="input-group mb-3">
                     <span class="input-group-text" id="userEmail-addon"><i class="bi bi-envelope-at"></i></span>
-                    <input type="tel" class="form-control" placeholder="Введіть Email:" aria-label="UserEmail" aria-describedby="userEmail-addon" name="signup-userEmail">
+                    <input type="tel" class="form-control" placeholder="Введіть Email:" aria-label="UserEmail"
+                           aria-describedby="userEmail-addon" name="signup-userEmail"
+                           value="@Model.SignUpFormModel?.UserEmail">
                 </div>
+                @if (Model.ValidationErrors.ContainsKey("UserEmail"))
+                {
+                    <div class="p-1 alert alert-danger">@Model.ValidationErrors["UserEmail"]</div>
+                }
                 <p>Введіть Адресу:</p>
                 <div class="input-group mb-3">
                     <span class="input-group-text" id="userCountry-addon"><i class="bi bi-geo-alt"></i></span>
-                    <input type="text" class="form-control" placeholder="Страна:" aria-label="UserCountry" aria-describedby="userCountry-addon" name="signup-userCountry">
+                    <input type="text" class="form-control" placeholder="Страна:" aria-label="UserCountry"
+                           aria-describedby="userCountry-addon" name="signup-userCountry"
+                           value="@Model.SignUpFormModel?.UserCountry">
                 </div>
+                @if (Model.ValidationErrors.ContainsKey("UserCountry"))
+                {
+                    <div class="p-1 alert alert-danger">@Model.ValidationErrors["UserCountry"]</div>
+                }
+
                 <div class="input-group mb-3">
                     <span class="input-group-text" id="userRegion-addon"><i class="bi bi-geo-alt"></i></span>
-                    <input type="text" class="form-control" placeholder="Область:" aria-label="UserRegion" aria-describedby="userRegion-addon" name="signup-userRegion">
+                    <input type="text" class="form-control" placeholder="Область:" aria-label="UserRegion"
+                           aria-describedby="userRegion-addon" name="signup-userRegion"
+                           value="@Model.SignUpFormModel?.UserRegion">
                 </div>
+                @if (Model.ValidationErrors.ContainsKey("UserRegion"))
+                {
+                    <div class="p-1 alert alert-danger">@Model.ValidationErrors["UserRegion"]</div>
+                }
+
                 <div class="input-group mb-3">
                     <span class="input-group-text" id="userLocality-addon"><i class="bi bi-geo-alt"></i></span>
-                    <input type="text" class="form-control" placeholder="Населений пункт:" aria-label="UserLocality" aria-describedby="userLocality-addon" name="signup-userLocality">
+                    <input type="text" class="form-control" placeholder="Населений пункт:" aria-label="UserLocality"
+                           aria-describedby="userLocality-addon" name="signup-userLocality"
+                           value="@Model.SignUpFormModel?.UserLocality">
                 </div>
+                @if (Model.ValidationErrors.ContainsKey("UserLocality"))
+                {
+                    <div class="p-1 alert alert-danger">@Model.ValidationErrors["UserLocality"]</div>
+                }
+
+
                 <div class="input-group mb-3">
                     <span class="input-group-text" id="userAddress1-addon"><i class="bi bi-geo-alt"></i></span>
-                    <input type="text" class="form-control" placeholder="Адреса:" aria-label="UserAddress1" aria-describedby="userAddress1-addon" name="signup-userAddress1">
+                    <input type="text" class="form-control" placeholder="Адреса:" aria-label="UserAddress1"
+                           aria-describedby="userAddress1-addon" name="signup-userAddress1"
+                           value="@Model.SignUpFormModel?.UserAddress1">
                 </div>
+                @if (Model.ValidationErrors.ContainsKey("UserAddress1"))
+                {
+                    <div class="p-1 alert alert-danger">@Model.ValidationErrors["UserAddress1"]</div>
+                }
+
                 <div class="input-group mb-3">
                     <span class="input-group-text" id="userAddress2-addon"><i class="bi bi-geo-alt"></i></span>
-                    <input type="text" class="form-control" placeholder="Будова/дім/кв.:" aria-label="UserAddress2" aria-describedby="userAddress2-addon" name="signup-userAddress2">
+                    <input type="text" class="form-control" placeholder="Будова/дім/кв.:" aria-label="UserAddress2"
+                           aria-describedby="userAddress2-addon" name="signup-userAddress2"
+                           value="@Model.SignUpFormModel?.UserAddress2">
                 </div>
+                @if (Model.ValidationErrors.ContainsKey("UserAddress2"))
+                {
+                    <div class="p-1 alert alert-danger">@Model.ValidationErrors["UserAddress2"]</div>
+                }
+
                 <div class="input-group mb-3">
                     <span class="input-group-text" id="userInteractionForm-addon"><i class="bi bi-person-workspace"></i></span>
-                    <select class="form-select" aria-label="UserInteractionForm" aria-describedby="userInteractionForm-addon" name="signup-userInteractionForm">
+                    <select class="form-select" aria-label="UserInteractionForm" aria-describedby="userInteractionForm-addon
+                            name="signup-userInteractionForm" value="@Model.SignUpFormModel?.UserInteractionForm">
                         <option selected>Оберить форму взаємодії (фізична/юридична особа)</option>
                         <option value="Фізична-особа">Фізична особа</option>
                         <option value="Юрідична-особа">Юрідична особа</option>
                     </select>
                 </div>
+                @if (Model.ValidationErrors.ContainsKey("UserInteractionForm"))
+                {
+                    <div class="p-1 alert alert-danger">@Model.ValidationErrors["UserInteractionForm"]</div>
+                }
+
                 <div class="input-group mb-3">
                     <span class="input-group-text" id="userCompanyName-addon"><i class="bi bi-building"></i></span>
-                    <input type="text" class="form-control" placeholder="Введіть назву организації:" aria-label="UserCompanyName" aria-describedby="userCompanyName-addon" name="signup-userCompanyName">
+                    <input type="text" class="form-control" placeholder="Введіть назву организації:" aria-label="UserCompanyName"
+                           aria-describedby="userCompanyName-addon" name="signup-userCompanyName"
+                           value="@Model.SignUpFormModel?.UserCompanyName">
                 </div>
+                @if (Model.ValidationErrors.ContainsKey("UserCompanyName"))
+                {
+                    <div class="p-1 alert alert-danger">@Model.ValidationErrors["UserCompanyName"]</div>
+                }
             </div>
         </div>
 
@@ -91,6 +149,11 @@
                     <span class="input-group-text" id="userPasswordConfirm-addon"><i class="bi bi-person-fill-add"></i></span>
                     <input type="password" class="form-control" placeholder="Підтвердіть пароль:" aria-label="UserPasswordConfirm" aria-describedby="userPasswordConfirm-addon" name="signup-userPasswordConfirm">
                 </div>
+                @if (Model.ValidationErrors.ContainsKey("UserPasswordConfirm"))
+                {
+                    <div class="p-1 alert alert-danger">@Model.ValidationErrors["UserPasswordConfirm"]</div>
+                }
+
                 <div class="input-group mb-3">
                     <button type="submit" class="btn btn-outline-primary">Реєстрація</button>
                 </div>
@@ -99,16 +162,13 @@
                     {
                         <div class="d-flex p-2 bd-highlight alert  @(Model.IsSuccess ?? false ? "alert-success" : "alert-danger")" role="alert">
                             @Model.Message
-                          
+
                         </div>
                     }
                 </div>
             </div>
 
             <div class="row">
-
-
-           
             </div>
         </div>
 
