V024 Most DB table added

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -22,8 +22,8 @@
         <br />
         Після завершення реєстрації ви зможите:
         <ul class="list-group list-group-flush">
-            <li class="list-group-item"><strong>Як виробники</strong>, розмістити інформацію про свої виробничі потужності та послуги, приймати замовлення від клієнтів.</li>
-            <li class="list-group-item"><strong>Як замовники</strong>, опублікувати запит на виготовлення продукції та знайти найкращих виконавців.</li>
+            <li class="list-group-item"><strong>Як виробник</strong>, розмістити інформацію про свої виробничі потужності та послуги, приймати замовлення від клієнтів.</li>
+            <li class="list-group-item"><strong>Як замовник</strong>, опублікувати запит на виготовлення продукції та знайти найкращих виконавців.</li>
             <li class="list-group-item"></li>
 
         </ul>
