--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -1,4 +1,17 @@
-﻿<!DOCTYPE html>
+﻿@using System.Security.Claims
+@{
+    bool isAuthenticated = Context.User.Identity?.IsAuthenticated ?? false;
+    String avatarSrc = isAuthenticated
+    ? Context.User.Claims.First(c => c.Type == ClaimTypes.UserData).Value : "";
+
+    String userName = isAuthenticated
+    ? Context.User.Claims.First(c => c.Type == ClaimTypes.Name).Value : "";
+}
+
+
+
+
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8" />
